[tool.poetry]
name = "src"
version = "2022.05.22"
description = "Series of Python tools that download 100s of 1000s of CSVs from NOAA, clean the data, load into PostGIS"
authors = ["darrida <darrida.py@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prefect = "^2.0b4"
boto3 = "^1.20.41"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
